# CPLUSPLUSDB

./: CMakeLists.txt  README.md  SAMPLE_OPERATIONS  data.txt  dupa_dump  main.cpp
database/: database.cpp  database.h
handlers/: handlers.cpp  handlers.h
parser/: parser.cpp
table/: condition.cpp  condition.h  datatype.h  table.cpp  table.h  tablerow.cpp  tablerow.h
utils/: mapper.cpp  mapper.h  parser.cpp  parser.h  printer.cpp  printer.h
